# CodTech-task-2

./: CMakeLists.txt  README.md
include/: Node.h  main.h
src/: deleteNode.c  insertNode.c  main.c  traverseList.c
